[package]
name = "sui-spec"
description = "Declarative Lisp-authored specs for CppNix-parity behaviors. Rust types are the hard boundary; Lisp forms are the free-middle authoring surface. Both engines (tree-walker + VM) drive the same spec, so they cannot drift."
keywords = ["nix", "parity", "testing", "lisp", "tatara"]
categories = ["development-tools::testing"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tatara-lisp.workspace = true
tatara-lisp-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
sui-compat.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

# Needed by the dual-exec runner for SIGKILL on timeout.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "sui-sweep"
path = "src/bin/sui-sweep.rs"

[lints.clippy]
pedantic = "warn"
