[package]
name = "sui-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Nix store abstraction with SeaORM metadata"

[dependencies]
sui-compat.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
