[package]
name = "sui-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Nix store abstraction with SeaORM-backed metadata for the sui Rust-native runtime"
keywords = ["nix", "store", "seaorm", "substituter"]
categories = ["database-implementations", "filesystem"]

[dependencies]
sui-compat.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
sha2.workspace = true
xz2 = "0.1"
zstd = "0.13"
ed25519-dalek.workspace = true

[dev-dependencies]
tempfile.workspace = true
